# cmake-seed

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  ProjectConfig.cmake.inc  README.md  appveyor.yml
.circleci/: config.yml
App/: CMakeLists.txt
App/Include/: Program.hpp
App/Source/: Main.cpp  Program.cpp
CMake/: Project-Config.cmake
CMake/ExternalProjects/: Bandit.cmake  Docopt.cmake
CMake/Modules/: FindBandit.cmake
Lib/: CMakeLists.txt  Config.cmake.inc
Lib/Include/: Calculator.hpp  Lib.hpp
Lib/Source/: Calculator.cpp
Test/: CMakeLists.txt
Test/Source/: Calculator.cpp  Main.cpp
