project (Lib VERSION 1.0.0)

include (GenerateExportHeader)

file (GLOB LOCAL_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Include/*.hpp")
file (GLOB LOCAL_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")

file (GLOB EXTERN_HEADER_FILES "${CMAKE_CURRENT_BINARY_DIR}/Include/*.hpp")
file (GLOB EXTERN_SOURCE_FILES "${CMAKE_CURRENT_BINARY_DIR}/Source/*.cpp")

configure_file (
	${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.inc 
	${CMAKE_CURRENT_BINARY_DIR}/Include/Config.hpp @ONLY)

set (HEADER_FILES
	${LOCAL_HEADER_FILES}
    ${EXTERN_HEADER_FILES})

source_group ("Include\\" FILES ${HEADER_FILES})

set (SOURCE_FILES
	${LOCAL_SOURCE_FILES}
    ${EXTERN_SOURCE_FILES})

source_group ("Source\\" FILES ${SOURCE_FILES})

add_library (${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)

target_include_directories (${PROJECT_NAME} PUBLIC  
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include> 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/Include>
    $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>)

generate_export_header(${PROJECT_NAME}
	EXPORT_MACRO_NAME "LIB_PUBLIC"
	EXPORT_FILE_NAME "Include/Export.hpp")

install (DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/Include/"
    DESTINATION ${INCLUDE_INSTALL_DIR} 
    COMPONENT Headers)

install (DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Include/"
    DESTINATION ${INCLUDE_INSTALL_DIR} 
    COMPONENT Headers)

install (TARGETS ${PROJECT_NAME}
	EXPORT ${TARGET_NAME}
	ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR}  COMPONENT Libraries
	LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} COMPONENT Libraries
	RUNTIME DESTINATION ${BINARY_INSTALL_DIR} COMPONENT Binaries)
