project (Lib)

include (GenerateExportHeader)

file (GLOB LOCAL_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Include/*.hpp")
file (GLOB LOCAL_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")

file (GLOB EXTERN_HEADER_FILES "${CMAKE_CURRENT_BINARY_DIR}/Include/*.hpp")
file (GLOB EXTERN_SOURCE_FILES "${CMAKE_CURRENT_BINARY_DIR}/Source/*.cpp")

message (STATUS ${BUILD_SHARED_LIBS})

configure_file (
	"${CMAKE_SOURCE_DIR}/CMake/${PROJECT_NAME}Config.cmake" 
	${CMAKE_CURRENT_BINARY_DIR}/Include/Config.hpp @ONLY)

set (HEADER_FILES
	${LOCAL_HEADER_FILES}
    ${EXTERN_HEADER_FILES})

source_group ("Include\\" FILES ${HEADER_FILES})

set (SOURCE_FILES
	${LOCAL_SOURCE_FILES}
    ${EXTERN_SOURCE_FILES})

source_group ("Source\\" FILES ${SOURCE_FILES})

add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

target_include_directories (${PROJECT_NAME} PUBLIC  
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include> 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/Include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>)

generate_export_header(${PROJECT_NAME}
	EXPORT_MACRO_NAME "LIB_PUBLIC"
	EXPORT_FILE_NAME "Include/Export.hpp")

install (FILES ${HEADER_FILES}
    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}")

install (TARGETS ${PROJECT_NAME} ${PROJECT_STATIC_NAME}
	EXPORT ${EXPORT_NAME}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
