project (Lib)

include (GenerateExportHeader)

file (GLOB HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Include/*.hpp")
file (GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")

configure_file (
	"${CMAKE_SOURCE_DIR}/CMake/${PROJECT_NAME}Config.cmake" 
	${CMAKE_CURRENT_BINARY_DIR}/Include/Config.hpp @ONLY)

list (APPEND HEADER_FILES
    ${CMAKE_CURRENT_BINARY_DIR}/Include/Config.hpp
    ${CMAKE_CURRENT_BINARY_DIR}/Include/Export.hpp)

source_group ("Include\\" FILES ${HEADER_FILES})
source_group ("Source\\" FILES ${SOURCE_FILES})

add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

target_include_directories (${PROJECT_NAME} PUBLIC  
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include> 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/Include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>)

generate_export_header(${PROJECT_NAME}
	EXPORT_MACRO_NAME "LIB_PUBLIC"
	EXPORT_FILE_NAME "Include/Export.hpp")

install (FILES ${HEADER_FILES}
    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}")

install (TARGETS ${PROJECT_NAME} ${PROJECT_STATIC_NAME}
	EXPORT ${EXPORT_NAME}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
